zetasql/parser/testdata/rollup.test
# TODO: Remove no_show_parse_location_text after parse locations
# have been manually verified as correct.
[default no_show_parse_location_text]
SELECT x, SUM(y) FROM T GROUP BY ROLLUP(x);
--
QueryStatement [0-42]
  Query [0-42]
    Select [0-42]
      SelectList [7-16]
        SelectColumn [7-8]
          PathExpression [7-8]
            Identifier(x) [7-8]
        SelectColumn [10-16]
          FunctionCall [10-16]
            PathExpression [10-13]
              Identifier(SUM) [10-13]
            PathExpression [14-15]
              Identifier(y) [14-15]
      FromClause [17-23]
        TablePathExpression [22-23]
          PathExpression [22-23]
            Identifier(T) [22-23]
      GroupBy [24-42]
        GroupingItem [33-42]
          Rollup [33-42]
            PathExpression [40-41]
              Identifier(x) [40-41]
--
SELECT
  x,
  SUM(y)
FROM
  T
GROUP BY ROLLUP(x)

==

SELECT x, y, GROUPING(x) = 1, IF(GROUPING(y) = 0, "foo", "bar")
FROM T GROUP BY ROLLUP(x, y);
--
QueryStatement [0-92]
  Query [0-92]
    Select [0-92]
      SelectList [7-63]
        SelectColumn [7-8]
          PathExpression [7-8]
            Identifier(x) [7-8]
        SelectColumn [10-11]
          PathExpression [10-11]
            Identifier(y) [10-11]
        SelectColumn [13-28]
          BinaryExpression(=) [13-28]
            FunctionCall [13-24]
              PathExpression [13-21]
                Identifier(`GROUPING`) [13-21]
              PathExpression [22-23]
                Identifier(x) [22-23]
            IntLiteral(1) [27-28]
        SelectColumn [30-63]
          FunctionCall [30-63]
            PathExpression [30-32]
              Identifier(`IF`) [30-32]
            BinaryExpression(=) [33-48]
              FunctionCall [33-44]
                PathExpression [33-41]
                  Identifier(`GROUPING`) [33-41]
                PathExpression [42-43]
                  Identifier(y) [42-43]
              IntLiteral(0) [47-48]
            StringLiteral("foo") [50-55]
            StringLiteral("bar") [57-62]
      FromClause [64-70]
        TablePathExpression [69-70]
          PathExpression [69-70]
            Identifier(T) [69-70]
      GroupBy [71-92]
        GroupingItem [80-92]
          Rollup [80-92]
            PathExpression [87-88]
              Identifier(x) [87-88]
            PathExpression [90-91]
              Identifier(y) [90-91]
--
SELECT
  x,
  y,
  `GROUPING`(x) = 1,
  `IF`(`GROUPING`(y) = 0, "foo", "bar")
FROM
  T
GROUP BY ROLLUP(x, y)

==

select x, SUM(y) FROM T GROUP @{hint_name=5} BY ROLLUP(x);
--
QueryStatement [0-57]
  Query [0-57]
    Select [0-57]
      SelectList [7-16]
        SelectColumn [7-8]
          PathExpression [7-8]
            Identifier(x) [7-8]
        SelectColumn [10-16]
          FunctionCall [10-16]
            PathExpression [10-13]
              Identifier(SUM) [10-13]
            PathExpression [14-15]
              Identifier(y) [14-15]
      FromClause [17-23]
        TablePathExpression [22-23]
          PathExpression [22-23]
            Identifier(T) [22-23]
      GroupBy [24-57]
        Hint [30-44]
          HintEntry [32-43]
            Identifier(hint_name) [32-41]
            IntLiteral(5) [42-43]
        GroupingItem [48-57]
          Rollup [48-57]
            PathExpression [55-56]
              Identifier(x) [55-56]
--
SELECT
  x,
  SUM(y)
FROM
  T
GROUP @{ hint_name = 5 } BY ROLLUP(x)

==

select x, y, z, GROUPING (
x)
FROM T
GROUP BY 1, 2, ROLLUP (
x + 2, y = 'foo', z), z, x, ROLLUP(y, x
);
--
QueryStatement [0-102]
  Query [0-102]
    Select [0-102]
      SelectList [7-29]
        SelectColumn [7-8]
          PathExpression [7-8]
            Identifier(x) [7-8]
        SelectColumn [10-11]
          PathExpression [10-11]
            Identifier(y) [10-11]
        SelectColumn [13-14]
          PathExpression [13-14]
            Identifier(z) [13-14]
        SelectColumn [16-29]
          FunctionCall [16-29]
            PathExpression [16-24]
              Identifier(`GROUPING`) [16-24]
            PathExpression [27-28]
              Identifier(x) [27-28]
      FromClause [30-36]
        TablePathExpression [35-36]
          PathExpression [35-36]
            Identifier(T) [35-36]
      GroupBy [37-102]
        GroupingItem [46-47]
          IntLiteral(1) [46-47]
        GroupingItem [49-50]
          IntLiteral(2) [49-50]
        GroupingItem [52-81]
          Rollup [52-81]
            BinaryExpression(+) [61-66]
              PathExpression [61-62]
                Identifier(x) [61-62]
              IntLiteral(2) [65-66]
            BinaryExpression(=) [68-77]
              PathExpression [68-69]
                Identifier(y) [68-69]
              StringLiteral('foo') [72-77]
            PathExpression [79-80]
              Identifier(z) [79-80]
        GroupingItem [83-84]
          PathExpression [83-84]
            Identifier(z) [83-84]
        GroupingItem [86-87]
          PathExpression [86-87]
            Identifier(x) [86-87]
        GroupingItem [89-102]
          Rollup [89-102]
            PathExpression [96-97]
              Identifier(y) [96-97]
            PathExpression [99-100]
              Identifier(x) [99-100]
--
SELECT
  x,
  y,
  z,
  `GROUPING`(x)
FROM
  T
GROUP BY 1, 2, ROLLUP(x + 2, y = 'foo', z), z, x, ROLLUP(y, x)

==

select x FROM T GROUP BY ROLLUP();
--
ERROR: Syntax error: Unexpected ")" [at 1:33]
select x FROM T GROUP BY ROLLUP();
                                ^

==

select x, GROUPING( FROM T GROUP BY x;
--
ERROR: Syntax error: Expected ")" but got keyword FROM [at 1:21]
select x, GROUPING( FROM T GROUP BY x;
                    ^

==

select x, GROUPING FROM T GROUP BY x;
--
ERROR: Syntax error: Expected "(" but got keyword FROM [at 1:20]
select x, GROUPING FROM T GROUP BY x;
                   ^

==

# GROUPING takes a single argument, but this is validated by the resolver.
select x, GROUPING(), GROUPING(x, y, z) FROM T GROUP BY x;
--
QueryStatement [0-57]
  Query [0-57]
    Select [0-57]
      SelectList [7-39]
        SelectColumn [7-8]
          PathExpression [7-8]
            Identifier(x) [7-8]
        SelectColumn [10-20]
          FunctionCall [10-20]
            PathExpression [10-18]
              Identifier(`GROUPING`) [10-18]
        SelectColumn [22-39]
          FunctionCall [22-39]
            PathExpression [22-30]
              Identifier(`GROUPING`) [22-30]
            PathExpression [31-32]
              Identifier(x) [31-32]
            PathExpression [34-35]
              Identifier(y) [34-35]
            PathExpression [37-38]
              Identifier(z) [37-38]
      FromClause [40-46]
        TablePathExpression [45-46]
          PathExpression [45-46]
            Identifier(T) [45-46]
      GroupBy [47-57]
        GroupingItem [56-57]
          PathExpression [56-57]
            Identifier(x) [56-57]

--
SELECT
  x,
  `GROUPING`(),
  `GROUPING`(x, y, z)
FROM
  T
GROUP BY x
==

select x FROM T GROUP BY ROLLUP(x;
--
ERROR: Syntax error: Expected ")" or "," but got ";" [at 1:34]
select x FROM T GROUP BY ROLLUP(x;
                                 ^
==

select x FROM T GROUP BY ROLLUP x;
--
ERROR: Syntax error: Expected "(" but got identifier "x" [at 1:33]
select x FROM T GROUP BY ROLLUP x;
                                ^
==

select x FROM T GROUP BY ROLLUP;
--
ERROR: Syntax error: Expected "(" but got ";" [at 1:32]
select x FROM T GROUP BY ROLLUP;
                               ^

==

select x FROM T GROUP BY x, y WITH ROLLUP;
--
ERROR: Syntax error: Expected end of input but got keyword WITH [at 1:31]
select x FROM T GROUP BY x, y WITH ROLLUP;
                              ^
==

select `rollup` FROM T GROUP BY `rollup`;
--
QueryStatement [0-40]
  Query [0-40]
    Select [0-40]
      SelectList [7-15]
        SelectColumn [7-15]
          PathExpression [7-15]
            Identifier(`rollup`) [7-15]
      FromClause [16-22]
        TablePathExpression [21-22]
          PathExpression [21-22]
            Identifier(T) [21-22]
      GroupBy [23-40]
        GroupingItem [32-40]
          PathExpression [32-40]
            Identifier(`rollup`) [32-40]
--
SELECT
  `rollup`
FROM
  T
GROUP BY `rollup`
